# Cicada-FW

./: .clang-format  .clang-format.py  .ecrc  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCORD_ETIQUETTE.md  Doxyfile  LICENSE  README.md  codingstyle.txt  mainpage.md  mbed.cross.build  meson.build  stm32.cross.build
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-generic.yaml  check.yaml  deploy-gh-pages.yaml
cicada/: bufferedserial.cpp  bufferedserial.h  circularbuffer.h  ctask.h  defines.h  ibufferedserial.h  icommdevice.h  irq.h  iserial.h  istatefuldevice.h  linecircularbuffer.h  meson.build  mqttcountdown.cpp  mqttcountdown.h  scheduler.cpp  scheduler.h  task.h  tick.h  types.h
cicada/commdevices/: atcommdevice.cpp  atcommdevice.h  blockingcommdev.cpp  blockingcommdev.h  cc1352p7.cpp  cc1352p7.h  esp8266.cpp  esp8266.h  espressif.cpp  espressif.h  icommdevice.h  iipcommdevice.h  ipcommdevice.cpp  ipcommdevice.h  modemdetect.cpp  modemdetect.h  rakrui3.cpp  rakrui3.h  sim7x00.cpp  sim7x00.h  sim800.cpp  sim800.h  simcommdevice.cpp  simcommdevice.h
cicada/platform/linux/: irq_linux.cpp  meson.build  putchar.c  tick_linux.cpp  unixserial.cpp  unixserial.h
cicada/platform/mbed/: mbedirq.cpp  mbedserial.cpp  mbedserial.h  mbedtick.cpp
cicada/platform/noplatform/: noplatform.h  tick_none.cpp
cicada/platform/stm32f1/: irq_stm32.cpp  meson.build  stm32uart.cpp  stm32uart.h  tick_stm32.cpp
dep/: STM32Cube.wrap  meson.build
dep/cpputest/: meson.build
dep/paho.mqtt.embedded-c/: meson.build
dep/printf/: meson.build
dep/stm32cube_fw_f1/: meson.build
dep/stm32cube_fw_f1/config/: stm32f1xx_hal_conf.h
doc/: annotated.html  blockingcommdev_8h_source.html  bufferedserial_8h_source.html  circularbuffer_8h_source.html  classCicada_1_1BlockingCommDevice-members.html  classCicada_1_1BlockingCommDevice.html  classCicada_1_1BufferedSerial-members.html  classCicada_1_1BufferedSerial.html  classCicada_1_1BufferedSerialTask-members.html  classCicada_1_1BufferedSerialTask.html  classCicada_1_1CircularBuffer-members.html  classCicada_1_1CircularBuffer.html  classCicada_1_1EnaccessTicker-members.html  classCicada_1_1EnaccessTicker.html  classCicada_1_1IBufferedSerial-members.html  classCicada_1_1IBufferedSerial.html  classCicada_1_1ICommDevice-members.html  classCicada_1_1ICommDevice.html  classCicada_1_1IIPCommDevice-members.html  classCicada_1_1IIPCommDevice.html  classCicada_1_1IPCommDevice-members.html  classCicada_1_1IPCommDevice.html  classCicada_1_1ISerial-members.html  classCicada_1_1ISerial.html  classCicada_1_1LineCircularBuffer-members.html  classCicada_1_1LineCircularBuffer.html  classCicada_1_1MQTTCountdown-members.html  classCicada_1_1MQTTCountdown.html  classCicada_1_1MbedSerial-members.html  classCicada_1_1MbedSerial.html  classCicada_1_1NoplatformSerial-members.html  classCicada_1_1NoplatformSerial.html  classCicada_1_1Scheduler-members.html  classCicada_1_1Scheduler.html  classCicada_1_1Sim7x00CommDevice-members.html  classCicada_1_1Sim7x00CommDevice.html  classCicada_1_1Sim800CommDevice-members.html  classCicada_1_1Sim800CommDevice.html  classCicada_1_1SimCommDevice-members.html  classCicada_1_1SimCommDevice.html  (+83 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+22 more)
examples/: README.md  blinky_stm32.cpp  blocking.cpp  blockingmqtt.cpp  blockingmqtt_stm32.cpp  dualport_stm32.cpp  ipcommdevice.cpp  ipcommdevice_stm32.cpp  meson.build  scheduler.cpp  serial.cpp  serial_stm32.cpp  termios.cpp
examples/linux/: autodetectntp.cpp  blocking.cpp  blockingmqtt.cpp  eol.cpp  eventloop.cpp  ipcommdevice.cpp  meson.build  ntp.cpp  scheduler.cpp  serial_linux.cpp  simplesend.cpp
examples/mbed/: .mbedignore  README.md  cicada  compile.txt  debug.json  main.cpp  mbed_app.json
examples/mbed/enaccess/: mbed
examples/stm32f1/: blinky.cpp  blinky_stm32.cpp  blockingmqtt_freertos.cpp  blockingmqtt_stm32.cpp  dualport_freertos.cpp  dualport_stm32.cpp  eventloop.cpp  ipcommdevice_freertos.cpp  ipcommdevice_stm32.cpp  meson.build  mqttsequence.cpp  ntp.cpp  printf.cpp  printf_stm32.cpp  serial.cpp  serial_stm32.cpp  simplemqtt.cpp
platform/mbed/: mbedserial.cpp  mbedserial.h  meson.build
platform/stm32f1/: meson.build  stm32uart.cpp  stm32uart.h
src/: FP.h  eblockingcommdev.cpp  eblockingcommdev.h  ebufferedserial.cpp  ebufferedserial.h  ecircularbuffer.cpp  ecircularbuffer.h  edefines.h  eibufferedserial.h  eicommdevice.h  eirq.h  eiserial.h  emqttcountdown.cpp  escheduler.cpp  escheduler.h  eserial.h  esim7x00.cpp  esim7x00.h  etask.h  etermios.cpp  etermios.h  meson.build
src/CommDevices/: esim7x00.h
src/Config/: eserial.h  etick.h
src/Modules/: LineCircularBuffer.h  ebufferedserial.h  ecircularbuffer.h  emqttcountdown.cpp  emqttcountdown.h
src/commdevices/: blockingcommdev.cpp  blockingcommdev.h  eblockingcommdev.cpp  eblockingcommdev.h  eicommdevice.h  eiipcommdevice.h  esim7x00.cpp  esim7x00.h  icommdevice.h  iipcommdevice.h  ipcommdevice.cpp  ipcommdevice.h  sim7x00.cpp  sim7x00.h  sim800.cpp  sim800.h  simcommdevice.cpp  simcommdevice.h
src/config/: defines.h  eirq.h  eserial.h  irq.h  serial.h
src/modules/: bufferedserial.cpp  bufferedserial.h  circularbuffer.h  ctask.h  ebufferedserial.cpp  ebufferedserial.h  eibufferedserial.h  eiserial.h  emqttcountdown.cpp  emqttcountdown.h  escheduler.cpp  escheduler.h  etask.h  ibufferedserial.h  iserial.h  linecircularbuffer.h  mqttcountdown.cpp  mqttcountdown.h  scheduler.cpp  scheduler.h  task.h
src/platform/: enoplatform.h  estm32uart.cpp  estm32uart.h  etermios.cpp  etermios.h  etick_stm32.cpp
subprojects/: STM32Cube.wrap
test/: main.cpp  meson.build
(+24 files in other folders)
