src_files = files([
    'commdevices/ipcommdevice.h',
    'commdevices/ipcommdevice.cpp',
    'commdevices/simcommdevice.h',
    'commdevices/simcommdevice.cpp',
    'commdevices/sim7x00.h',
    'commdevices/sim7x00.cpp',
    'commdevices/sim800.h',
    'commdevices/sim800.cpp',
    'commdevices/blockingcommdev.h',
    'commdevices/blockingcommdev.cpp',
    'commdevices/modemdetect.h',
    'commdevices/modemdetect.cpp',
    'bufferedserial.h',
    'bufferedserial.cpp',
    'defines.h',
    'mqttcountdown.h',
    'mqttcountdown.cpp',
    'scheduler.h',
    'scheduler.cpp',
    'task.h',
    'types.h'
])
