src_inc = include_directories([
    'commdevices',
    'config',
    'modules'
])

src_files = files([
    'commdevices/sim7x00.h',
    'commdevices/sim7x00.cpp',
    'commdevices/blockingcommdev.h',
    'commdevices/blockingcommdev.cpp',
    'modules/bufferedserial.h',
    'modules/bufferedserial.cpp',
    'modules/mqttcountdown.h',
    'modules/mqttcountdown.cpp',
    'modules/scheduler.h',
    'modules/scheduler.cpp'
])
