src_inc = include_directories([
    'commdevices',
    'config',
    'modules'
])

src_files = files([
    'commdevices/ipcommdevice.h',
    'commdevices/ipcommdevice.cpp',
    'commdevices/simcommdevice.h',
    'commdevices/simcommdevice.cpp',
    'commdevices/sim7x00.h',
    'commdevices/sim7x00.cpp',
    'commdevices/sim800.h',
    'commdevices/sim800.cpp',
    'commdevices/blockingcommdev.h',
    'commdevices/blockingcommdev.cpp',
    'modules/bufferedserial.h',
    'modules/bufferedserial.cpp',
    'modules/mqttcountdown.h',
    'modules/mqttcountdown.cpp',
    'modules/scheduler.h',
    'modules/scheduler.cpp',
    'modules/ctask.h'
])
