# MQTT Include directories
eclipse_paho_mqtt_inc = include_directories([
    './paho.mqtt.embedded-c/MQTTPacket/src',
    './paho.mqtt.embedded-c/MQTTClient/src',
    './paho.mqtt.embedded-c/MQTTClient/src/linux'
])

# MQTT Source files
eclipse_paho_mqtt_src = files([
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTConnectClient.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTConnectServer.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTDeserializePublish.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTFormat.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTPacket.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTSerializePublish.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTSubscribeClient.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTSubscribeServer.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTUnsubscribeClient.c',
    './paho.mqtt.embedded-c/MQTTPacket/src/MQTTUnsubscribeServer.c'
])